# morpheus-hpcg

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  ChangeLog  NOTICES.txt  README.md
benchmarks/performance/: build.sh  process.sh  run.sh  submit.sh
scripts/: parse-hpcg-out.sh  parse-morpheus-out.py  spy.py
src/: CG.cpp  CG.hpp  CGData.hpp  CG_ref.cpp  CG_ref.hpp  CheckAspectRatio.cpp  CheckAspectRatio.hpp  CheckProblem.cpp  CheckProblem.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeOptimalShapeXYZ.cpp  ComputeOptimalShapeXYZ.hpp  ComputeProlongation.cpp  ComputeProlongation.hpp  ComputeProlongation_ref.cpp  ComputeProlongation_ref.hpp  ComputeResidual.cpp  ComputeResidual.hpp  ComputeRestriction.cpp  ComputeRestriction.hpp  ComputeRestriction_ref.cpp  ComputeRestriction_ref.hpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSPMV_ref.cpp  ComputeSPMV_ref.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeSYMGS_ref.cpp  ComputeSYMGS_ref.hpp  ComputeWAXPBY.cpp  ComputeWAXPBY.hpp  ComputeWAXPBY_ref.cpp  (+50 more)
src/morpheus/: ExchangeHalo.cpp  ExchangeHalo.hpp  FormatSelector.cpp  FormatSelector.hpp  MGData.cpp  MGData.hpp  MGDataRoutines.cpp  MGDataRoutines.hpp  Morpheus.hpp  Morpheus_ExchangeHalo.cpp  Morpheus_ExchangeHalo.hpp  Morpheus_FormatSelector.cpp  Morpheus_FormatSelector.hpp  Morpheus_HpcgDat.cpp  Morpheus_IO.cpp  Morpheus_IO.hpp  Morpheus_MGData.hpp  Morpheus_MGDataRoutines.cpp  Morpheus_MGDataRoutines.hpp  Morpheus_Parser.cpp  Morpheus_Parser.hpp  Morpheus_ReadHpcgDat.cpp  Morpheus_ReadHpcgDat.hpp  Morpheus_ReportResults.cpp  Morpheus_ReportResults.hpp  Morpheus_SparseMatrix.hpp  Morpheus_SparseMatrixRoutines.cpp  Morpheus_SparseMatrixRoutines.hpp  Morpheus_Timer.cpp  Morpheus_Timer.hpp  Morpheus_Vector.hpp  Morpheus_VectorRoutines.cpp  Morpheus_VectorRoutines.hpp  ReadHpcgDat.cpp  ReadHpcgDat.hpp  SparseMatrix.cpp  SparseMatrix.hpp  SparseMatrixRoutines.cpp  SparseMatrixRoutines.hpp  Utils.cpp  (+5 more)
test/archer/ref/: run.sh
test/archer/serial/: run.sh
test/gpu/: hpcg.sh
test/ref/: hpcg.sh
test/serial/: hpcg.sh
